packages/cra-template-viya-app-quickstart/template/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viyaapp
  labels:
    app: viyaapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viyaapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: viyaapp
    spec:
      containers:
      - env:
        - name: APPNAME
          valueFrom:
            configMapKeyRef:
              name: viyaapp-configmap
              key: APPNAME
        - name: APPPORT
          valueFrom:
            configMapKeyRef:
              name: viyaapp-configmap
              key: APPPORT
        - name: CLIENTID
          valueFrom:
            configMapKeyRef:
              name: viyaapp-configmap
              key: CLIENTID
        - name: VIYA_SERVER
          valueFrom:
            configMapKeyRef:
              name: viyaapp-configmap
              key: VIYA_SERVER
        - name: LOGLEVEL
          valueFrom:
            configMapKeyRef:
              name: viyaapp-configmap
              key: LOGLEVEL
  # secrets - missing something simple in secret setup
        - name: CLIENTSECRET
          valueFrom:
            secretKeyRef:
              name: viyaapp-secret
              key: CLIENTSECRET  
  # tls
        - name: TLS_CRT
          valueFrom:
            secretKeyRef:
              name: viyaapp-tls
              key: tls.crt
        - name: TLS_KEY
          valueFrom:
            secretKeyRef:
              name: viyaapp-tls
              key: tls.key
  # image
        image: docker.example.com/viyaapp:1.0.0
        imagePullPolicy: "Always"
        name: viyaapp
        ports:
        - containerPort: 8080
        resources: {}
