packages/cra-template-viya-app-quickstart/template/k8s/base/service.yaml
 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: viyaapp
  name: viyaapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: viyaapp
